--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -2,7 +2,9 @@
 <resources>
     <style name="Theme.LedController" parent="Theme.AppCompat.DayNight.NoActionBar">
         <item name="android:statusBarColor">@android:color/transparent</item>
-        <item name="android:windowLightStatusBar">true</item>
-        <item name="android:windowBackground">@android:color/white</item>
+
+        <item name="android:windowLightStatusBar">false</item>
+
+        <item name="android:windowBackground">@android:color/black</item>
     </style>
 </resources>
